--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* General styling */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -18,6 +20,36 @@ ul {
     flex-direction: column;
     align-content: space-between;
 }
+
+section { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 20px 0px;
+}
+
+section h1{
+    margin: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 80%;
+    margin: 0 auto;
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card_divider {
+    border-bottom: 3px dotted rgb(234, 196, 98);
+}
+
 
 /* Menu */
 
@@ -43,7 +75,6 @@ ul {
     color: black;
     text-decoration: none;
 }
-
 
 
 /* Top section */
@@ -75,7 +106,26 @@ ul {
     opacity: 1;
 }
 
-section {
-    margin: 5px 0px;
+
+/* About me section */
+
+.about_me li{
+    margin: 5px;
 }
+
+.card .card_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    min-width: 80%;
+    max-width: 90%;
+    margin: 10px;
+    padding: 5px 0px 15px 0px;
+}
+
+.basic_info {
+}
+
 
