--- a/style.css
+++ b/style.css
@@ -40,10 +40,23 @@ section h1{
     justify-content: center;
     align-items: center;
 
+    min-width: 80%;
     max-width: 80%;
     margin: 0 auto;
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card .card_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    min-width: 80%;
+    max-width: 80%;
+    margin: 10px;
+    padding: 5px 0px 15px 0px;
 }
 
 .card_divider {
@@ -92,7 +105,7 @@ section h1{
     background: url(images/main_img.jpg) no-repeat center center;
     background-size: cover;
     opacity: 0.8;
-    color: rgb(255, 243, 110);
+    color: rgb(234, 196, 98);
     text-shadow: 2px 1px rgb(48, 46, 20);
 }
 
@@ -113,19 +126,43 @@ section h1{
     margin: 5px;
 }
 
-.card .card_section {
+/* Portfolio section */
+
+ .images_container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+ }
 
-    min-width: 80%;
-    max-width: 90%;
-    margin: 10px;
-    padding: 5px 0px 15px 0px;
-}
+ .images_container img {
+    max-width: 100%;    
+ }
 
-.basic_info {
-}
+ .shaded_img {
+    position: relative;
+    display: flex;
+ }
 
+ .shaded_img::before {
+    content: '';
+    position: absolute;
 
+    height: 100%;
+    width: 100%;
+
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(255,175,24,0.4) 100%);    
+    z-index: 1;
+ }
+
+ .text_overlay{
+    position: absolute;
+    z-index: 2;
+ }
+
+ .text_overlay h2, p {
+     padding: 10px 0 0 10px;
+ }
+
+ .text_overlay button {
+     margin: 10px;
+ }
