--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ section h1{
     padding: 5px;    
     text-align: center;
     
-    border-radius: 10px;
     border-bottom: 1px solid rgb(113, 105, 105);
 }
 
@@ -119,7 +118,6 @@ section h1{
     background-size: cover;
     opacity: 0.8;
     color: rgb(240, 180, 27);
-    text-shadow: 2px 1px rgb(48, 46, 20);
 }
 
 .page_top h1 {
@@ -128,8 +126,12 @@ section h1{
 }
 
 .page_top h2 {
+    padding: 3px 30px;
     font-size: 1.5em;
     opacity: 1;
+
+    color: #ffffff;
+    border: 2px solid rgb(240, 180, 27);
 }
 
 
