--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ section h1{
 
     min-width: 80%;
     max-width: 80%;
-    margin: 0 auto;
+    margin: 10px 0 30px 0;
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -65,6 +65,7 @@ section h1{
 
 .btn {
     padding: 10px 30px;
+    margin-top: 10px;
 
     border-radius: 15px;
     border-width: 0;
@@ -77,10 +78,26 @@ section h1{
 
 /* Menu */
 
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-bottom: 1px solid rgb(113, 105, 105);
+}
+
+.logo img {
+    padding: 5px;
+}
+
+.logo h4 {
+    padding: 5px;
+}
+
 .navigation {
     display: flex;
     flex-flow: column wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -117,7 +134,7 @@ section h1{
     background: url(images/main_img.jpg) no-repeat center center;
     background-size: cover;
     opacity: 0.8;
-    color: rgb(240, 180, 27);
+    color: rgb(249, 182, 12);
 }
 
 .page_top h1 {
@@ -134,7 +151,24 @@ section h1{
     border: 2px solid rgb(240, 180, 27);
 }
 
+.page_top .icons_list {
+    padding: 10px;
+    margin: 10px auto;
 
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+
+    width: 60%;
+}
+
+.icons_list a {
+    padding: 5px;
+}
+
+.icons_list .icon {
+    max-width: 90%;
+}
 
 /* About me section */
 
@@ -201,7 +235,7 @@ section h1{
 
 }
 
-.contact div {
+.contact > div {
     padding: 20px 10px;
 }
 
@@ -231,7 +265,7 @@ section h1{
 .contact_form form input {
     width: 80%;
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0;
 
     color: rgb(165, 165, 165);
     background-color: rgb(242, 242, 242);
@@ -253,9 +287,26 @@ section h1{
     background: rgb(255, 174, 74);
 }
 
+.contact_info .msg {
+    max-width: 30%;
+}
 
-.contact_info p:nth-child(1) {
+.contact_info p {
+    padding-left: 10px;
+}
+
+.contact_info p:nth-child(2) {
     margin-bottom: 70px;
+}
+
+.contact_info .icons_list {
+    align-self: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 50%;
+    margin-bottom: 10px;
 }
 
 
