--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ section {
 
 section h1 {
     margin: 20px 0 10px 0;
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .card {
@@ -41,8 +41,7 @@ section h1 {
     justify-content: center;
     align-items: center;
 
-    min-width: 80%;
-    max-width: 80%;
+    width: 80%;
     margin: 10px 0 30px 0;
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -54,8 +53,7 @@ section h1 {
     justify-content: center;
     align-items: center;
 
-    min-width: 80%;
-    max-width: 80%;
+    width: 80%;
     padding: 15px 0px 15px 0px;
 }
 
@@ -77,7 +75,7 @@ section h1 {
 
     color: #ffffff;
     background: linear-gradient(to right, rgba(251,160,12,1) 0%, rgba(255,205,0,1) 100%);
-    font-weight: bold;
+    font-weight: 700;
     transition: 0.3s;
 }
 
@@ -106,8 +104,8 @@ section h1 {
 }
 
 .logo h4 {
-    font-weight: 700;
     padding: 0 5px;
+    font-weight: 700;
 }
 
 .navigation {
@@ -155,13 +153,13 @@ section h1 {
 }
 
 .page_top h1 {
-    font-size: 3.5em;
+    font-size: 3.5rem;
     opacity: 1;
 }
 
 .page_top h2 {
     padding: 3px 30px;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     opacity: 1;
 
     color: #ffffff;
@@ -180,7 +178,7 @@ section h1 {
 }
 
 .icons_list a {
-    padding: 5px;
+    padding: 4%;
 }
 
 .icons_list .icon {
@@ -216,7 +214,7 @@ section h1 {
 /* Skills section */
 
 .skills {
-    font-size: 24px;
+    font-size: 1.3rem;
 }
 
 .skills h4 {
@@ -272,11 +270,7 @@ section h1 {
  }
 
  .text_overlay h2 {
-     font-size: 40px;
- }
-
- .text_overlay p {
-    font-size: 16px;
+     font-size: 2.3rem;
  }
 
  .text_overlay h2, .text_overlay p {
@@ -298,7 +292,7 @@ section h1 {
     align-items: center;
 
     width: 100%;
-    background-color: rgba(250,250,255,1);
+    background-color: rgb(255, 255, 255);
 }
 
 .contact > div {
@@ -317,11 +311,13 @@ section h1 {
 
     width: 100%;
     margin-bottom: 20px;
+
+    background: #ffffff;
 }
 
 .contact_form h2 {
-    padding: 10px;
-    font-size: 32px;
+    padding: 20px 0 10px;
+    font-size: 1.8rem;
 }
 
 .contact_form form {
@@ -379,13 +375,16 @@ section h1 {
 .contact_info .icons_list {
     align-self: flex-start;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
 
     width: 60%;
     margin-bottom: 10px;
 }
 
+.icons_list .icon {
+    padding: 0 0;
+}
 
 
 /* Footer */
@@ -395,7 +394,7 @@ section h1 {
     text-align: center;
 
     color: rgb(165, 165, 165);
-    font-size: 14px;
+    font-size: 0.8rem;
     font-family: 'Ubuntu', sans-serif;
 }
 
