--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ ul {
     display: flex;
     flex-direction: column;
     align-content: space-between;
+
+    width: 100%;
 }
 
 section { 
@@ -27,7 +29,7 @@ section {
     justify-content: center;
     align-items: center;
 
-    margin: 0px 0px;
+    margin-bottom: 30px;
 }
 
 section h1 {
@@ -40,19 +42,18 @@ section h1 {
     margin-top: 10px;
 
     border-radius: 15px;
-    border-width: 0;
+    border: 1px solid rgba(0, 0, 0, 0);
 
     color: #ffffff;
     background: linear-gradient(to right, rgba(251,160,12,1) 0%, rgba(255,205,0,1) 100%);
     font-weight: 700;
     font-size: 1rem;
-    transition: 0.3s;
 }
 
 .btn:hover {
     color: rgba(255,205,0,1);
-    background: #ffffff;
-    
+    background:rgb(255, 255, 255);
+    border: 1px solid rgba(255,205,0,1);
 }
 
 
@@ -93,6 +94,7 @@ section h1 {
 
 .navigation li:hover {
     background-color: #ababab;
+    transition: 1s;
 }
 
 .navigation li a {
@@ -133,8 +135,15 @@ section h1 {
     opacity: 1;
 
     color: #ffffff;
-    border: 2px solid rgb(240, 180, 27);
+    border: 3px solid rgba(255, 255, 255, 0);
+
+    animation-name: borderSpin;
+    animation-duration: 6s;
+    animation-iteration-count: 1;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
 }
+
 
 .page_top .icons_list {
     padding: 10px;
@@ -150,6 +159,12 @@ section h1 {
 
 .icons_list a {
     padding: 10px 10px;
+    font-size: 2rem;
+    color: rgb(249, 182, 12);
+}
+
+.icons_list i:hover {
+    opacity: 0.6;
 }
 
 
@@ -163,7 +178,7 @@ section h1 {
     align-items: center;
 
     width: 80%;
-    margin: 10px 0 30px 0;
+    margin: 10px 0 0 0;
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -231,58 +246,65 @@ section h1 {
 
 /* Portfolio section */
 
- .images_container {
+.images_container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 
-    margin: 10px 0;
+    max-width: 90%;
+    margin-top: 10px;
+    overflow: hidden;
 
     color: #ffffff;
     background: rgba(250,250,255,1);
  }
 
- .images_container img {
-    height: 100%;
-    max-width: 100%;  
-    height: 350px;
+.images_container .image_cell {
+    width: 100%;
+    height: auto;
+    flex-grow: 1;
+ }
+
+.image_cell img {
+    min-height: 40vh;
+    max-height: 75vh;
+    width: 100%;
+    min-width: 0;
     object-fit: cover;
+
+ }
+
+.image_cell:last-child {
+    display: none;
+}
+
+.text_overlay {
+    position: absolute;
+    width: inherit;
+    z-index: 2;
+ }
+
+.text_overlay h2 {
+     font-size: 2.3rem;
+     padding: 10px 0 0 10px;
+ }
+
+.text_overlay button {
+    margin: 10px;
  }
 
  .shaded_img {
     position: relative;
-    display: flex;
  }
 
  .shaded_img::before {
     content: '';
     position: absolute;
-
+    
     height: 100%;
     width: 100%;
-
-    background: linear-gradient(to bottom, rgba(34,34,34,0.5) 0%, rgba(255,154,61,0.5) 100%);    
+    background-image: linear-gradient(to bottom, rgba(34,34,34,0.5) 0%, rgba(255,154,61,0.5) 100%);
     z-index: 1;
  }
-
- .text_overlay {
-    position: absolute;
-    z-index: 2;
- }
-
- .text_overlay h2 {
-     font-size: 2.3rem;
- }
-
- .text_overlay h2, .text_overlay p {
-    padding: 10px 0 0 10px;
- }
-
- .text_overlay button {
-    margin: 10px;
- }
-
-
  
  /* Contact section */
 
@@ -312,8 +334,8 @@ section h1 {
     justify-content: center;
     align-items: center;
 
+    padding: 20px;
     width: 100%;
-    margin-bottom: 20px;
 
     background: #ffffff;
 }
@@ -333,15 +355,17 @@ section h1 {
 
 }
 
-.contact_form form textarea {
+form textarea {
     resize: none;
 }
 
-.contact_form form input, textarea {
+form input, form textarea {
     width: 80%;
     padding: 10px;
     margin: 15px 0;
 
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
     color: rgb(165, 165, 165);
     background-color: rgb(242, 242, 242);
     border-width: 0;
@@ -349,7 +373,12 @@ section h1 {
     outline: none;
 }
 
-.contact_form form input:focus, textarea:focus {
+form input::placeholder, form textarea::placeholder {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
+}
+
+form input:focus, form textarea:focus {
     box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
@@ -365,6 +394,7 @@ section h1 {
 
 .contact_info .msg {
     max-width: 30%;
+    margin-bottom: 20px;
 }
 
 .contact_info p {
@@ -383,10 +413,11 @@ section h1 {
 
     width: 60%;
     margin-bottom: 10px;
+
 }
 
-.icons_list .icon {
-    padding: 0 0;
+.contact_info .icons_list i {
+    color: #ffffff;
 }
 
 
@@ -405,9 +436,10 @@ section h1 {
 
 /* MEDIA QUERIES */
 
-/* Tablet portrait */
 
-@media only screen and (min-width: 600px) {
+
+
+@media only screen and (min-width: 480px) {
 
     /* Navigation bar */
 
@@ -444,7 +476,7 @@ section h1 {
     }
 
     .page_top h1 {
-        font-size: 5em;
+        font-size: 5rem;
     }
 
     /* About me + skills sections*/
@@ -460,6 +492,23 @@ section h1 {
     }
 
 
+    /* Portfolio section */
+    
+     .images_container .image_cell {
+        width: auto;
+        height: 40vh;
+        flex-grow: 1;
+     }
+    
+     .image_cell img {
+        max-height: 100%;
+        width: auto;
+        min-width: 100%;
+        object-fit: cover;
+     }
+
+
+
     /* Contact section */
 
     .contact_card {
@@ -468,6 +517,16 @@ section h1 {
 
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         padding-bottom: 0;
+    }
+
+    .contact_form h2 {
+        align-self: flex-start;
+        margin-left: 10%;
+    }
+
+    .contact_form .btn {
+        align-self: flex-end;
+        margin-right: 10%;
     }
 
     .about_me .card_section:nth-child(2) {
@@ -484,6 +543,18 @@ section h1 {
 
 @media only screen and (min-width: 900px) {
 
+
+    /* Navigation */
+
+    nav {
+        width: 40%;
+    }
+
+    .navigation {
+        width: 100%;
+        justify-content: space-between;
+    }
+
     /*About me + skills sections*/
 
     .card {
@@ -492,7 +563,7 @@ section h1 {
     }
 
     .card_section {
-        height: 50vh;
+        height: 40vh;
         padding: 15px 15px;
     }
 
@@ -505,33 +576,55 @@ section h1 {
         border-right: 3px dotted rgb(234, 196, 98);
     }
 
-    /* Skills section */
+    /* Portfolio section*/
 
-    .skills .card_section {
-        height: 40vh;
-    }
+    .images_container .image_cell {
+        width: auto;
+     }
 
-    .skills .card_divider {
-        height: 30vh;
-    }
+     .image_cell:last-child {
+        display: inline-block;
+        flex-grow: 10;
+     }
 
 }
 
 @media only screen and (min-width: 1200px) {
+
+    /* Page top section */
+
+    .page_top {
+        height: 700px;
+    }
+
+    .page_top h1 {
+        font-size: 8rem;
+    }
+
+    .page_top h2 {
+        font-size: 2.5rem;
+    }
+
+    .page_top .icons_list i {
+        font-size: 3rem;
+    }
     
     /* Contact section */
 
     .contact_card {
         flex-direction: row-reverse;
-        width: 80%;
     }
 
     .contact_form {
         width: 80%;
     }
-
-    .contact_form form {
-        width: 80%;
-    }
 }
 
+@keyframes borderSpin {
+    0% {}
+    15% { border: 3px solid rgb(255, 255, 255)}
+    25% {border-top: 3px solid rgb(249, 182, 12)}
+    50% {border-top: 3px solid rgb(249, 182, 12); border-right: 3px solid rgb(249, 182, 12);}
+    75% {border-top: 3px solid rgb(249, 182, 12); border-right: 3px solid rgb(249, 182, 12); border-bottom: 3px solid rgb(249, 182, 12);}
+    100% {border-top: 3px solid rgb(249, 182, 12); border-right: 3px solid rgb(249, 182, 12); border-bottom: 3px solid rgb(249, 182, 12);border-left: 3px solid rgb(249, 182, 12);}  
+}
