--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ section h1 {
     border-radius: 15px;
     border: 1px solid rgba(0, 0, 0, 0);
 
-    color: #ffffff;
+    color: rgb(255,255,255);
     background: linear-gradient(to right, rgba(251,160,12,1) 0%, rgba(255,205,0,1) 100%);
     font-weight: 700;
     font-size: 1rem;
@@ -67,7 +67,7 @@ section h1 {
 
     padding: 15px;
 
-    background-color: #e1dfdf;
+    background-color: rgb(225, 223, 223);
 }
 
 .logo img {
@@ -93,7 +93,7 @@ section h1 {
 }
 
 .navigation li:hover {
-    background-color: #ababab;
+    background-color: rgb(171, 171, 171);
     transition: 1s;
 }
 
@@ -134,7 +134,7 @@ section h1 {
     font-size: 1.5rem;
     opacity: 1;
 
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     border: 3px solid rgba(255, 255, 255, 0);
 
     animation-name: borderSpin;
@@ -218,7 +218,7 @@ section h1 {
 }
 
 .basic_info {
-    color: #FFC53D;
+    color: rgb(255, 197, 61);
 }
 
 .basic_info b {
@@ -235,7 +235,7 @@ section h1 {
 
 .skills h4 {
     margin-bottom: 5px;;
-    color: #FFC53D
+    color: rgb(255, 197, 61)
 }
 
 .skills .skills_dsc {
@@ -254,7 +254,7 @@ section h1 {
     margin-top: 10px;
     overflow: hidden;
 
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     background: rgba(250,250,255,1);
  }
 
@@ -270,7 +270,6 @@ section h1 {
     width: 100%;
     min-width: 0;
     object-fit: cover;
-
  }
 
 .image_cell:last-child {
@@ -337,7 +336,7 @@ section h1 {
     padding: 20px;
     width: 100%;
 
-    background: #ffffff;
+    background: rgb(255, 255, 255);
 }
 
 .contact_form h2 {
@@ -388,7 +387,7 @@ form input:focus, form textarea:focus {
 
     padding: 20px;
 
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     background: rgb(255, 174, 74);
 }
 
@@ -417,7 +416,7 @@ form input:focus, form textarea:focus {
 }
 
 .contact_info .icons_list i {
-    color: #ffffff;
+    color: rgb(255, 255, 255);
 }
 
 
@@ -451,7 +450,7 @@ form input:focus, form textarea:focus {
         justify-content: space-between;
 
         width: 100%;
-        background:  #e1dfdf;
+        background:  rgb(225, 223, 223);
         z-index: 3;
     }
 
